# rs4se

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  package.xml
.github/workflows/: ccpp.yml
launch/: intel_d435i-intrinsics_calib.launch  intel_d435i-svio.launch  intel_d435i.launch
scripts/: format_code.bash  run.sh
scripts/install_deps/: config.bash  install_eigen.bash  install_opencv3.bash  install_yamlcpp.bash  run.bash
src/: common.hpp  intel_d435i.cpp  lerp.hpp  munit.hpp  rs.hpp  rs4se.hpp  test_rs.cpp  test_rs4se.cpp
