CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(rs4se)

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(
  catkin
  REQUIRED COMPONENTS
  roscpp
  std_msgs
  geometry_msgs
  cv_bridge
  image_transport
)
CATKIN_PACKAGE(LIBRARIES ${PROJECT_NAME})

INCLUDE_DIRECTORIES(${catkin_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})
ADD_EXECUTABLE(intel_d435i src/intel_d435i.cpp)
TARGET_LINK_LIBRARIES(
  intel_d435i
  realsense2
  ${OpenCV_LIBS}
  ${catkin_LIBRARIES}
)
